--- a/whitepaper/whitepaper.tex
+++ b/whitepaper/whitepaper.tex
@@ -40,17 +40,27 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Start of document
 \begin{document}
-\title{Title of the article.}
+\title{White Paper on Obstacle Detection via a Stereoscopic Camera System, Using Deep Learning}
 \date{\today}
-\author{Nome Cognomes\thanks{Email correspondence to: \href{mailto:email-id@domain.url}{\Email\ email-id@domain.url}}\\
-	Name of Organization
+\author{Zhiyang Ong\thanks{Email correspondence to: \href{mailto:ongz@acm.org}{\Email\ ongz@acm.org}}, Michael Bass, Khaled Nakhleh \thanks{Email correspondence to: \href{mailto:khaled.jkn@gmail.com}{\Email\ khaled.jkn@gmail.com}}, \\
+Drupad Khublani, and Venkata Pydimarri \\
+Department of Electrical and Computer Engineering \\
+College of Engineering \\
+Texas A\&M University
 }
+%College of Engineering \\
+%Texas A\&M University
+%\author{Zhiyang Ong\thanks{Email correspondence to: \href{mailto:email-id@domain.url}{\Email\ email-id@domain.url}} and Michael Bass and Khaled Nakhleh and Drupad Khublani and Venkata Pydimarri\\
+%Department of Electrical and Computer Engineering \\
+%College of Engineering \\
+%Texas A&M University
+%}
 \maketitle
 
 
-\begin{abstract} 
-Insert abstract here. More stuff to be included.
-\end{abstract}
+%\begin{abstract} 
+%Insert abstract here. More stuff to be included.
+%\end{abstract}
 
 
 
@@ -68,9 +78,15 @@ There are a significant amount of references for helping people to learn \LaTeX 
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Alternate Plan}
+\label{sec:AlternatePlan}
 
-
-
+Data sets to use in lieu of poor, failed, and/or untimely data acquisition, and preprocessing of data set: \vspace{-0.3cm}
+\begin{enumerate} \itemsep -4pt
+\item Manuela Chessa's GENUA PESTO -- GENoa hUman Active fixation database: PEripersonal space STereoscopic images and grOund truth disparity: \url{https://www.manuelachessa.it/sample-page/benchmarking-datasets-2/}
+\item The KITTI Vision Benchmark Suite: \url{http://www.cvlibs.net/datasets/kitti/eval_object.php}
+\end{enumerate}
 
 
 
