--- a/whitepaper/whitepaper.tex
+++ b/whitepaper/whitepaper.tex
@@ -86,6 +86,16 @@ Data sets to use in lieu of poor, failed, and/or untimely data acquisition, and 
 \begin{enumerate} \itemsep -4pt
 \item Manuela Chessa's GENUA PESTO -- GENoa hUman Active fixation database: PEripersonal space STereoscopic images and grOund truth disparity: \url{https://www.manuelachessa.it/sample-page/benchmarking-datasets-2/}
 \item The KITTI Vision Benchmark Suite: \url{http://www.cvlibs.net/datasets/kitti/eval_object.php}
+\item Mapillary Vistas Dataset: \url{https://www.mapillary.com/dataset/vistas?pKey=cc5dEAyQECBFF9MN3MbdZA&lat=20&lng=0&z=1.5}
+\item ApolloScape: \url{http://apolloscape.auto/}
+\item BDD100K self-driving dataset:url{https://www.therobotreport.com/uc-berkeley-opens-self-driving-dataset-bdd100k/}: \vspace{-0.3cm}
+	\begin{enumerate} \itemsep -2pt
+	\item \url{http://bdd-data.berkeley.edu/} and \url{https://deepdrive.berkeley.edu/}
+	\end{enumerate}
+\item nuScenes: \url{https://www.nuscenes.org/}
+\item Cityscapes Dataset: \url{https://www.cityscapes-dataset.com/}
+\item Top Open-Source Lidar Driving Data Sets: \url{https://mighty.ai/blog/top_open_source_lidar_driving_datasets/}
+\item Apollo Data Open Platform : \url{http://data.apollo.auto/?locale=en-us&lang=en}
 \end{enumerate}
 
 
